--- a/style.css/style.css
+++ b/style.css/style.css
@@ -1,101 +1,140 @@
-*{
+
+  *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  body{
-      background-image: url(./bubbles.jpg);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
   
-  .bg_card{
+  
+  .box{
+      
       background-color: black;
-      width: 1100px;
-      height: 500px;
-      border: 1px solid black;
-      margin-top: 70px;
-      margin-bottom: 70px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: center;  
+      width: 70%;
+      height: 62vh;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top:100px; 
+     
   }
      
-  .service_card{
-      background-color: hsl(244, 40%, 15%);
-      width:800px;
-      height: 340px;
-      border: 1px solid black;
-      margin-top: 25px;
-      margin-bottom: 25px;
+
+  .boxes{
+
+      background-color:rgb(8, 4, 66);
       display: flex;
       justify-content: center;
-      align-items: center;
-      border-radius: 10px;
-      
-  
+      align-items: center; 
+      width:75%;
+      height: 45vh;    
+      border-radius:5px;
   }
-  .card_content{
-      width: 400px;
-      height: 340px;
-   
-      
-    
+
+
+  .box1{
+
+      width:50%;
+      height:41vh;
+      margin-top: 100px;
+      margin-left: 25px; 
   }
-  .card_image{
-      width: 400px;
-      height: 340px;
-      
-  
-      
+
+
+  span{
+
+       color:rgb(125, 60, 187);
   }
-  
-  h1 {
+
+
+    p{ 
+
       color: white;
-      font-weight: 650px;
-      font-size: 30px;
-      width: 300px;
-      margin-top: 40px;
-      margin-left: 40px;
-          
-    }
-    .span_color{
-      color:rgb(125, 60, 187);
-    }
-    p{
-      color: grey;
+      width: 80%;
+      margin-left:26px;
+      margin-top: 20px;
       font-size: 15px;
-      width: 300px;
-      margin-top: 40px;
-      margin-left: 40px;
-    }
-    .data{
-  
+      line-height: 21px; 
+      opacity: 0.3;
+  }
+
+
+   h2 {
+        color: white;
+        width: 80%;
+        margin-left:25px; 
+        font-size: 30px;
+        line-height: 37px;        
+      }
+ 
+
+    .foot{
+
+      color:white;
       display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      width: 300px;
-      margin-left: 10px;
+      gap:42px;
+      margin-left: 21px;
       margin-top: 50px;
+      line-height: 20px;
     }
-    .digit{
-      color: white;
-      font-weight: 500px;
-      font-size: 20px;
-  
-    }
+
+    
     .text{
-      color: grey;
-      font-size: 10px;
+
+      color: white;
       margin-top: 5px;
-     
+      margin-left:5px;
+      font-size: 11px;
+      font-weight: bold;  
+      opacity: 0.3;
     }
+
+
+    .imagebox{
+
+        width: 390px;
+        height: 340px;   
+        margin-left: auto;
+        margin-right: auto;  
+    }
+
+
     img{
+
       object-fit: cover;
       width: 100%;
-      height: 100%;
-      border-radius: 10px;
-      opacity: 0.4;
-      
+      height: 45vh;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+      opacity: 0.6;
     }
+
+
+    .image2{
+        
+        background-color: purple;
+        object-fit: cover;
+        width: 100%;
+        height: 45vh;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        opacity: 0.6;
+    }
+
+
+   .digit{
+
+    font-size: 18px;
+    font-weight: bold;
+    margin-left:7px;
+  
+   }
+
+   
+   .space{
+     font-size:15px;
+     color: white;
+     margin-left: 2px;
+    
+   }
